--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,17 @@
 
 
 	</properties>
+	
+	<distributionManagement>
+	<snapshotRepository>
+	
+	<id>nexus-snapshots</id>
+	<url>http://admin:admin123@localhost:8081/repository/maven-snapshots/</url>
+	</snapshotRepository>
+	
+	
+	
+	</distributionManagement>
 
 	<dependencies>
 		<dependency>
@@ -51,6 +62,12 @@
 			<version>${aspectj.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-deploy-plugin</artifactId>
+			<version>2.8.2</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
@@ -76,8 +93,8 @@
 					<forkCount>3</forkCount>
 					<reuseForks>true</reuseForks>
 					<suiteXmlFiles>
-						<!--<suiteXmlFile>src/test/resources/testrunners/test_regression.xml</suiteXmlFile>-->
-						<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
+						<suiteXmlFile>
+							src/test/resources/testrunners/test_regression.xml</suiteXmlFile>
 
 
 					</suiteXmlFiles>
@@ -96,6 +113,31 @@
 				</dependencies>
 
 
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>3.3.0</version>
+				<configuration>
+
+					<descriptorRefs>
+
+						<descriptorRefs>jar-with-dependencies</descriptorRefs>
+					</descriptorRefs>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+
+					</execution>
+
+
+				</executions>
 			</plugin>
 
 
