--- a/src/test/resources/config/qa.properties
+++ b/src/test/resources/config/qa.properties
@@ -2,3 +2,5 @@ url=https://naveenautomationlabs.com/opencart/index.php?route=account/login
 browser=firefox
 username=dora11@gmail.com
 password=Monkey@10
+remote=true
+huburl=http://localhost:4444/wd/hub
